syntax = "proto3";
package matcha.view;
import "gomatcha.io/matcha/pb/layout/layout.proto";
import "gomatcha.io/matcha/pb/paint/paint.proto";
import "google/protobuf/any.proto";

option go_package = "view";
option objc_class_prefix = "MatchaViewPB";

message Node {
  int64 id = 1;
  int64 buildId = 2;
  string bridgeName = 7;
  google.protobuf.Any bridgeValue = 8;
  map<string, google.protobuf.Any> values = 10;
  repeated Node children = 5;
}

message BuildNode {
  int64 id = 1;
  int64 buildId = 2;
  string bridgeName = 3;
  google.protobuf.Any bridgeValue = 4;
  map<string, google.protobuf.Any> values = 5;
  repeated int64 children = 6;
}

message LayoutPaintNode {
  int64 id = 1;
  int64 layoutId = 2;
  int64 paintId = 3;
  matcha.layout.Guide layoutGuide = 4;
  matcha.paint.Style paintStyle = 5;
}

message Root {
  Node node = 1;
  map<int64, LayoutPaintNode> layoutPaintNodes = 2;
  map<int64, BuildNode> buildNodes = 3;
}
